<resources>
    <string name="title_activity_main">My Main Activity</string>
    <string name="title_activity_habit_detail">Habit Detail</string>

    <string name="app_name">RMM</string>

    <string name="hello_world">Hello world!</string>
    <!-- Login activity -->
    <string name="login">Sign in</string>
    <string name="registration">Sign up</string>
    <string name="lbl_username">Username</string>
    <string name="lbl_enter_username">Enter your username</string>
    <string name="lbl_pwd">Password</string>
    <string name="lbl_enter_pwd">Enter your password</string>
    <string name="lbl_login">Login</string>

    <!-- Navigation drawer -->
    <string name="action_addHabit">Add Habit</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Habits</item>
        <item >Settings</item>
        <item >GoPro</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@mipmap/ic_home</item>
        <item>@mipmap/ic_people</item>
        <item>@mipmap/ic_photos</item>
        <item>@mipmap/ic_communities</item>
        <item>@mipmap/ic_pages</item>
        <item>@mipmap/ic_whats_hot</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="addHabit">addHabit</string>
    <string name="deleteHabit">DELETE HABIT</string>
    <string name="title_activity_add_habit">AddHabitActivity</string>
    <string name="title_activity_delete_habit">DeleteHabitActivity</string>
    <string name="title_activity_go_pro">GoProActivity</string>
    <string name="gopro">Go Pro!</string>
    <string name="title_activity_edit_habit">EditHabitActivity</string>
    <string name="action_settings">Settings</string>
    <string name="editHabit">EDIT HABIT</string>
    <string name="addHabitNameFieldSubtitle">Habit name</string>
    <string name="setFrequency">Set frequency of your habit</string>

    <string name="title_activity_edit_image">Change Image</string>
    <string name="title_activity_loading">LoadingActivity</string>
    <string name="load_string">Please wait while your data gets loaded...</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="lbl_registration">Sign up</string>

    <!-- Popup Dialog Strings -->
    <string name="title_no_account">No account found!</string>
    <string name="description_no_account">It\'s a description. Have you registered account? I bet NO!</string>
    <string name="dialog_badpassword">Bad user password!</string>
    <string name="dialog_title_badpassword">Bad password</string>
    <string name="dialog_criticalerror">Ooooopss...</string>
    <string name="dialog_title_criticalerror">Critical error!</string>
    <string name="dialog_internetconnection">Application for working need internet connection.</string>
    <string name="dialog_title_internetconnection">No connection!</string>
    <string name="dialog_title_noserverconn">No connection</string>
    <string name="dialog_noserverconn">Application has lost connection with server</string>
    <string name="title_activity_synchronization">SynchronizationActivity</string>
    <string name="master_chef_1">keep your habits in check you miserable maggot!</string>
    <string name="notification_habit_title">Habit today</string>

</resources>
